--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
 <title>Advanced Monthly Task Tracker</title>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <style>
+    .profile-container {
+  text-align: center;
+  margin-bottom: 16px;
+}
+
+.profile-container img {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%; /* Makes it circular */
+  border: 3px solid var(--primary);
+  object-fit: cover; /* Ensures the photo fits nicely */
+}
+
 :root {
   --primary: #1976d2;
   --primary-dark: #0d47a1;
@@ -77,15 +90,18 @@ button.secondary { background: var(--accent); }
 .progress-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); gap: 16px; }
 .progress-card { background: var(--card-bg); padding: 14px; border-radius: 10px; box-shadow: var(--shadow); }
 table { width: 100%; border-collapse: collapse; margin-top: 16px; }
-th, td { border: 1px solid #ddd; padding: 6px; text-align: center; }
-input[type=checkbox] { width: 18px; height: 18px; accent-color: var(--primary); cursor:pointer; margin-right:4px; }
+th, td { border: 1px solid #ddd; padding: 6px; text-align: center; transition: 0.2s; }
+tr:hover td { background: rgba(0,0,0,0.05); }
+input[type=checkbox] { width: 18px; height: 18px; accent-color: var(--primary); cursor:pointer; }
 td.weekend { background-color: rgba(255,200,200,0.3); }
 .dark td.weekend { background-color: rgba(255,100,100,0.2); }
-.dark-toggle { display: flex; align-items: center; gap: 8px; }
+.dark-toggle { display: flex; align-items: center; gap: 8px; margin-left: auto; }
 </style>
 </head>
 <body>
-<div class="wrapper">
+<div class="profile-container">
+  <img id="profilePhoto" src="jaani.jpg" alt="Profile Photo">
+</div>
 
 <h1>📅 Advanced Monthly Task Tracker</h1>
 
@@ -126,15 +142,18 @@ td.weekend { background-color: rgba(255,200,200,0.3); }
 <thead>
 <tr id="headerRow">
   <th>Day</th>
-  <th class="taskHeader" data-color="#4caf50">🌅 Exercise
+  <th class="taskHeader" data-color="#4caf50">
+    🌅 Exercise
     <input type="color" class="color-picker" onchange="changeColor(0,this.value)" value="#4caf50">
     <span class="rename-btn" onclick="renameTask(0)">✏️</span>
   </th>
-  <th class="taskHeader" data-color="#f44336">📚 Reading
+  <th class="taskHeader" data-color="#f44336">
+    📚 Reading
     <input type="color" class="color-picker" onchange="changeColor(1,this.value)" value="#f44336">
     <span class="rename-btn" onclick="renameTask(1)">✏️</span>
   </th>
-  <th class="taskHeader" data-color="#ff9800">🧘 Meditation
+  <th class="taskHeader" data-color="#ff9800">
+    🧘 Meditation
     <input type="color" class="color-picker" onchange="changeColor(2,this.value)" value="#ff9800">
     <span class="rename-btn" onclick="renameTask(2)">✏️</span>
   </th>
@@ -154,17 +173,14 @@ td.weekend { background-color: rgba(255,200,200,0.3); }
 <script>
 let taskCount = 3;
 let currentMonth = 0;
-let taskNames = {};
 let taskColors = [];
-let combinedChart;
+
 const monthNames=["","January","February","March","April","May","June","July","August","September","October","November","December"];
 document.getElementById("darkToggle").onchange=function(){document.body.classList.toggle("dark",this.checked);localStorage.setItem("darkMode",this.checked);};
 if(localStorage.getItem("darkMode")==="true"){document.body.classList.add("dark");document.getElementById("darkToggle").checked=true;}
+
 function toggleWeekly(){const sec=document.getElementById("weeklySection");const hidden=sec.classList.toggle("hidden");localStorage.setItem("weeklyHidden",hidden);}
 if(localStorage.getItem("weeklyHidden")==="true"){document.getElementById("weeklySection").classList.add("hidden");}
-
-function loadTaskNames(){taskNames = JSON.parse(localStorage.getItem("taskNames")) || {}}
-loadTaskNames();
 
 function loadTaskColors(){taskColors = JSON.parse(localStorage.getItem("taskColors")) || ["#4caf50","#f44336","#ff9800"]; }
 loadTaskColors();
@@ -173,7 +189,7 @@ function saveTaskColors(){localStorage.setItem("taskColors",JSON.stringify(taskC
 
 function renameTask(index){const newName = prompt("Rename Task:", document.querySelectorAll(".taskHeader")[index].textContent); if(newName){document.querySelectorAll(".taskHeader")[index].childNodes[0].nodeValue=newName; saveHeaders(); generateTable();}}
 
-function changeColor(index,color){taskColors[index]=color; saveTaskColors(); updateProgressCards();}
+function changeColor(index,color){taskColors[index]=color; saveTaskColors(); updateEverything();}
 
 function saveHeaders(){const headers=Array.from(document.querySelectorAll(".taskHeader")).map(h=>h.childNodes[0].nodeValue);localStorage.setItem("taskHeaders",JSON.stringify(headers));}
 function loadHeaders(){const saved = JSON.parse(localStorage.getItem("taskHeaders"));if(saved && saved.length>0){const headerRow = document.getElementById("headerRow");const dayTh = headerRow.querySelector("th");headerRow.innerHTML = "";headerRow.appendChild(dayTh);saved.forEach((text,i)=>{const th=document.createElement("th");th.className="taskHeader";th.dataset.color = taskColors[i]||"#4caf50";th.innerHTML=`${text}<input type="color" class="color-picker" value="${taskColors[i]}" onchange="changeColor(${i},this.value)"><span class="rename-btn" onclick="renameTask(${i})">✏️</span>`;headerRow.appendChild(th)});taskCount = saved.length;}}
@@ -181,23 +197,25 @@ function loadHeaders(){const saved = JSON.parse(localStorage.getItem("taskHeader
 function daysInMonth(m){if(m===0)return 31;return new Date(2026,m,0).getDate();}
 function changeMonth(){const val=parseInt(document.getElementById("monthSelector").value);currentMonth=val;let year=(currentMonth===0?2025:2026);let monthName=(currentMonth===0?"December":monthNames[currentMonth]);document.getElementById("monthTitle").textContent=monthName+" "+year;generateTable();}
 
-function generateTable(){loadHeaders();loadTaskNames();loadTaskColors();const tbody=document.getElementById("tableBody");tbody.innerHTML="";const total=daysInMonth(currentMonth);const year=currentMonth===0?2025:2026;const weekdayNames=["Sun","Mon","Tue","Wed","Thu","Fri","Sat"];for(let d=1;d<=total;d++){const row=document.createElement("tr");const weekdayIndex=new Date(year,currentMonth===0?11:currentMonth-1,d).getDay();const dayCell=document.createElement("td");dayCell.textContent=`${d} (${weekdayNames[weekdayIndex]})`;if(weekdayIndex===0||weekdayIndex===6)dayCell.classList.add("weekend");row.appendChild(dayCell);for(let t=0;t<taskCount;t++){const cell=document.createElement("td");const cb=document.createElement("input");cb.type="checkbox";cb.id=`m${currentMonth}-d${d}-t${t}`;cb.className="task-checkbox";cb.onchange=()=>{saveState();updateEverything();};const span=document.createElement("span");span.contentEditable=true;const key=`m${currentMonth}-d${d}-t${t}`;span.textContent=taskNames[key] || document.querySelectorAll(".taskHeader")[t].childNodes[0].nodeValue;span.onblur=()=>{taskNames[key]=span.textContent;localStorage.setItem("taskNames",JSON.stringify(taskNames));updateEverything();};cell.appendChild(cb);cell.appendChild(span);row.appendChild(cell);if(weekdayIndex===0||weekdayIndex===6)cell.classList.add("weekend");}tbody.appendChild(row);}loadState();updateEverything();}
+function generateTable(){loadHeaders();loadTaskColors();const tbody=document.getElementById("tableBody");tbody.innerHTML="";const total=daysInMonth(currentMonth);const year=currentMonth===0?2025:2026;const weekdayNames=["Sun","Mon","Tue","Wed","Thu","Fri","Sat"];for(let d=1;d<=total;d++){const row=document.createElement("tr");const weekdayIndex=new Date(year,currentMonth===0?11:currentMonth-1,d).getDay();const dayCell=document.createElement("td");dayCell.textContent=`${d} (${weekdayNames[weekdayIndex]})`;if(weekdayIndex===0||weekdayIndex===6)dayCell.classList.add("weekend");row.appendChild(dayCell);for(let t=0;t<taskCount;t++){const cell=document.createElement("td");const cb=document.createElement("input");cb.type="checkbox";cb.id=`m${currentMonth}-d${d}-t${t}`;cb.className="task-checkbox";cb.onchange=()=>{saveState();updateEverything();};cell.appendChild(cb);row.appendChild(cell);if(weekdayIndex===0||weekdayIndex===6)cell.classList.add("weekend");}tbody.appendChild(row);}loadState();updateEverything();}
 
-function saveState(){const all=document.querySelectorAll(".task-checkbox");const save={};all.forEach(cb=>save[cb.id]=cb.checked);localStorage.setItem("taskStates",JSON.stringify(save));}
-function loadState(){const saved=JSON.parse(localStorage.getItem("taskStates"));if(!saved)return;Object.keys(saved).forEach(id=>{const cb=document.getElementById(id);if(cb)cb.checked=saved[id];});}
+// === Fixed per-month state storage ===
+function saveState(){const all=document.querySelectorAll(".task-checkbox");let saved=JSON.parse(localStorage.getItem("taskStates")||"{}");if(!saved[currentMonth]) saved[currentMonth]={};all.forEach(cb=>saved[currentMonth][cb.id]=cb.checked);localStorage.setItem("taskStates",JSON.stringify(saved));}
+function loadState(){const saved=JSON.parse(localStorage.getItem("taskStates")||"{}");if(!saved[currentMonth]) return;Object.keys(saved[currentMonth]).forEach(id=>{const cb=document.getElementById(id);if(cb)cb.checked=saved[currentMonth][id];});}
 
 function updateProgressCards(){const grid=document.getElementById("progressGrid");grid.innerHTML="";for(let t=0;t<taskCount;t++){const cbs=document.querySelectorAll(`input[id*="-t${t}"]`);const done=Array.from(cbs).filter(c=>c.checked).length;const total=cbs.length;const percent=Math.round((done/total)*100);const color = taskColors[t]||"#4caf50";const card=document.createElement("div");card.className="progress-card";card.innerHTML=`<h3>${document.querySelectorAll(".taskHeader")[t].childNodes[0].nodeValue}</h3><div class="progress-bar"><div class="progress-fill" style="width:${percent}%;background:${color}"></div></div><div>${done}/${total} (${percent}%)</div><div class="streak-box"><span id="flame${t}" class="flame dead">🔥</span><br>🔥 Current Streak: <b id="currentStreak${t}">0</b> days<br>🏅 Best Streak: <b id="bestStreak${t}">0</b> days</div>`;grid.appendChild(card);}calculateStreaks();}
 
 function calculateStreaks(){const total=daysInMonth(currentMonth);for(let t=0;t<taskCount;t++){let best=0,temp=0,current=0;for(let d=1;d<=total;d++){const cb=document.getElementById(`m${currentMonth}-d${d}-t${t}`);if(cb.checked){temp++;best=Math.max(best,temp);}else temp=0;}for(let d=total;d>=1;d--){const cb=document.getElementById(`m${currentMonth}-d${d}-t${t}`);if(cb.checked)current++;else break;}document.getElementById(`currentStreak${t}`).textContent=current;document.getElementById(`bestStreak${t}`).textContent=best;const flame=document.getElementById(`flame${t}`);flame.className="flame";if(current===0)flame.classList.add("dead");else if(current<=3)flame.classList.add("small");else if(current<=7)flame.classList.add("medium");else flame.classList.add("large");}}
 
+let combinedChart;
 function updateCharts(){const total=daysInMonth(currentMonth);const weeks=["Week 1","Week 2","Week 3","Week 4"];const headers=document.querySelectorAll(".taskHeader");document.getElementById("taskCharts").innerHTML="";let datasets=[];for(let t=0;t<taskCount;t++){let weekData=[0,0,0,0];for(let d=1;d<=total;d++){const week=Math.floor((d-1)/7);const cb=document.getElementById(`m${currentMonth}-d${d}-t${t}`);if(cb.checked)weekData[week]++;}datasets.push(weekData);let canvas=document.createElement("canvas");canvas.height=80;document.getElementById("taskCharts").appendChild(canvas);new Chart(canvas,{type:"bar",data:{labels:weeks,datasets:[{label:headers[t].childNodes[0].nodeValue,data:weekData,backgroundColor:taskColors[t],borderRadius:8,borderSkipped:false}]}});}if(combinedChart)combinedChart.destroy();combinedChart=new Chart(document.getElementById("combinedChart"),{type:"bar",data:{labels:weeks,datasets:datasets.map((data,i)=>({label:headers[i].childNodes[0].nodeValue,data,backgroundColor:taskColors[i],borderRadius:8,borderSkipped:false}))}});}
 
 function addTask(){taskCount++;taskColors.push("#"+Math.floor(Math.random()*16777215).toString(16));saveTaskColors();let th=document.createElement("th");th.className="taskHeader";th.dataset.color = taskColors[taskCount-1];th.innerHTML=`Task ${taskCount}<input type="color" class="color-picker" value="${taskColors[taskCount-1]}" onchange="changeColor(${taskCount-1},this.value)"><span class="rename-btn" onclick="renameTask(${taskCount-1})">✏️</span>`;document.getElementById("headerRow").appendChild(th);saveHeaders();generateTable();}
 function removeTask(){if(taskCount<=1)return;document.querySelector("#headerRow th:last-child").remove();taskCount--;taskColors.pop();saveTaskColors();saveHeaders();generateTable();}
-function exportCSV(){let headers=["Day"];document.querySelectorAll(".taskHeader").forEach(h=>headers.push(h.childNodes[0].nodeValue));let rows=[];const total=daysInMonth(currentMonth);for(let d=1;d<=total;d++){let row=[d];for(let t=0;t<taskCount;t++){const cb=document.getElementById(`m${currentMonth}-d${d}-t${t}`);row.push(cb.checked?"1":"0");}rows.push(row);}let csv=[headers.join(",")].concat(rows.map(r=>r.join(","))).join("\n");const blob=new Blob([csv],{type:"text/csv"});const url=URL.createObjectURL(blob);const a=document.createElement("a");a.href=url;a.download="task_progress.csv";a.click();URL.revokeObjectURL(url);}
+function exportCSV(){let headers=["Day"];document.querySelectorAll(".taskHeader").forEach(h=>headers.push(h.childNodes[0].nodeValue));let rows=[];const total=daysInMonth(currentMonth);for(let d=1;d<=total;d++){let row=[d];for(let t=0;t<taskCount;t++){const cb=document.getElementById(`m${currentMonth}-d${d}-t${t}`);row.push(cb.checked?"1":"0");}rows.push(row);}let csv=[headers.join(",")].concat(rows.map(r=>r.join(","))).join("\n");let blob=new Blob([csv],{type:"text/csv"});let url=URL.createObjectURL(blob);let a=document.createElement("a");a.href=url;a.download=`TaskTracker_${currentMonth}.csv`;a.click();URL.revokeObjectURL(url);}
 function updateEverything(){updateProgressCards();updateCharts();}
-
-window.onload=()=>{changeMonth();updateEverything();}
+changeMonth();
 </script>
+
 </body>
 </html>
